fix optimize on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2645,8 +2645,5 @@ footer {
 }
 .about-us-column {
   float: left;
-  width: 30%;
-  padding: 10px;
-  margin-left:20px;
-
+  width: 33%;
 }
